<resources>
    <string name="app_name">Board Games Wishlist</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="add_boardgame"><u>Enter values</u></string>
    <string name="text_details">Details</string>
    <string name="title_activity_add_boardgame">Add a board game</string>
    <string name="name">Name</string>
    <string name="wish">I want it...</string>
    <string name="action_about">About</string>
    <string name="title_activity_board_game_details">Board game details</string>
    <string name="wish_details">You want it...</string>
    <string name="delete_game">Delete</string>
</resources>
