<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="david_abad.boardgameswishlist.BoardGameDetails"
    tools:showIn="@layout/activity_board_game_details">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_details"
            android:text="@string/text_details"
            android:textSize="30sp"
            android:textColor="#000000"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_details"
            android:text="@string/name"
            android:id="@+id/text_name"
            android:textSize="30sp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_name"
            android:text="@string/name"
            android:id="@+id/text_board_game_name"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/relativeLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wish_details"
            android:id="@+id/text_wish_details"
            android:textSize="30sp"
            android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rating_wish_details"
            android:layout_below="@id/text_wish_details"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="10dp"
            android:numStars="5"
            android:stepSize="1.0"
            android:progressTint="#f9f900"
            android:backgroundTint="#000000"
            android:secondaryProgressTint="#FFFFFF"
            android:isIndicator="true"/>

    </RelativeLayout>

</RelativeLayout>
